Try to use two milegits

--- a/milegit/index.html
+++ b/milegit/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Milegit</title>
-  <base href="https://bradwells.github.io/milegit/milegit">
+  <base href="https://bradwells.github.io/milegit/milegit/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.16cc50bd10577e614770.css"></head>
